Bug 242519 - Akonadi incorrectly creates database on external MySQL server
Summary: Akonadi incorrectly creates database on external MySQL server
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 4.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-22 21:23 UTC by Matěj Laitl
Modified: 2010-09-10 17:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2010-06-22 21:23:18 UTC
Version:           4.4 (using KDE 4.4.4) 
OS:                Linux

When fixing bug 193644, another bug was introduced. When initially creating database on external MySQL server, akonadi tries to create database named "akonadi" instead of user-specified database name.

The bug lies in akonadi/server/src/akonadi.cpp line 276.

Reproducible: Always

Steps to Reproduce:
1. setup akonadi to use external MySQL
2. change database name to something other than default
3. start akonadi

Actual Results:  
Akonadi tries to create database named "akonadi", ignoring user-specified database name

Expected Results:  
Akanadi should respect user-specified db name when configuring database
Comment 1 Volker Krause 2010-09-10 17:48:42 UTC
SVN commit 1173855 by vkrause:

Don't hardcode database name but use whatever is in the configuration.

BUG: 242519


 M  +1 -1      akonadi.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1173855