Don't hardcode database name but use whatever is in the configuration.

BUG: 242519

svn path=/trunk/kdesupport/akonadi/; revision=1173855